Added in code to select exact separation dates in post phase Find bugs clean ups and todo checks